# TheColdWorldConfigEditer

./: .gitignore  README.md  TheColdWorldConfigEditer.sln
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_1.md  ISSUE_TEMPLATE_2.md  ISSUE_TEMPLATE_3.md  ISSUE_TEMPLATE_4.md  ISSUE_TEMPLATE_5.md  ISSUE_TEMPLATE_6.md
CPlusPlus/Debug_Cpp/: Debug_Cpp.vcxproj  Debug_Cpp.vcxproj.filters  debugMain.cpp
CPlusPlus/Debug_Windows_Cpp/: DebugMain.cpp  Debug_Windows_Cpp.vcxproj  Debug_Windows_Cpp.vcxproj.filters
CPlusPlus/TheColdWorldConfigEditer_Windows/: TheColdWorldConfigEditer_Windows.aps  TheColdWorldConfigEditer_Windows.rc  TheColdWorldConfigEditer_Windows.vcxproj  TheColdWorldConfigEditer_Windows.vcxproj.filters  TheColdWorldConfigEditer_Windows_Dll_Header.h  TheColdWorldConfigEditer_Windows_Dll_Main.cpp  pch.h  resource.h  structures.h
CSharp/TheColdWorldConfigEditer/: LibraryMain.cs  TheColdWorldConfigEditer_Csharp.csproj
CSharp/TheColdWorldConfigEditer_.net7/: LibraryMain.cs  README.md  TheColdWorldConfigEditer_.net7.csproj
Python/: Debug.py  pyproject.toml  setup.py
Python/TheColdWorldConfigEditer/: For_str.py  __init__.py
