[project]
name="TheColdWorldConfigEditer-Python"
version ="0.0.1"
authors = [
  { name="TheColdWorld", email="thecoldworld@foxmail.com" },
]
description = "A solution that stores settings in a file"
readme = "../README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 license",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"